# flare-octo

./: CMakeLists.txt
cmake/: FindGLEW.cmake  Toolchain-mingw32.cmake
data/shaders/: blob.frag  blob.vert  decal.vert  frag-arrow.glsl  vert-arrow.glsl
ggl/: CMakeLists.txt  debug_font.cc  debug_font.h  file.cc  file.h  pixmap.cc  pixmap.h  program.cc  program.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.h  window.cc  window.h
intro/: CMakeLists.txt  blob.cc  blob.h  layer.h  logo.cc  logo.h  main.cc  programs.cc  programs.h  util.cc  util.h
